Dev 2 (#25)
* test task default status (active) - GREEN

* closing #15

* new HttpServer with port 0 in HttpServerTest BeforeEach, closes #17

* Minor implement regaring the logger

* Changing the server port from 0 back to 8080 default

* getHostname for dynamic hostname showing rather than hardcode 'localhost'

* removed dummy test

* renamed artifactId to pgr203eksamen

* Added our boy Kai to the README.md

* remove unused code

* remove contentroot

* #9 creating relation in database (project_id in task table)

* #9 implement controllers to list out all tasks and projects

* smol refactor of stream element variable name

* taskdao -> taskDao rename

* Tried to implement TaskUpdateController, missing update from ProductDao.

* minor error line 32

* #9 add tasks to a project

* #21 Adding status to task when adding a new task to database

* #22 adding status to project when making new project

* #23 attempting to list all members

* #23 can add members to tasks (duplicates can happen) - not optimal

* #23 only add member to task if not already assigned to task

* get tasks and members in correct order

* remove hasNoNullFields

Co-authored-by: Kaikka <kaileeto@gmail.com>
Co-authored-by: smeepz <stianlw@gmail.com>