@@ -6,6 +6,7 @@ import no.kristiania.db.Project;
 import java.io.IOException;
 import java.net.Socket;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.sql.SQLException;
 
 public class ProjectPostController implements HttpController {
@@ -17,18 +18,21 @@ public class ProjectPostController implements HttpController {
 
     @Override
     public void handle(HttpMessage request, Socket clientSocket) throws SQLException, IOException {
+        HttpMessage response = handle(request);
+        response.write(clientSocket);
+    }
+
+    public HttpMessage handle(HttpMessage request) throws SQLException {
         QueryString requestParameter = new QueryString(request.getBody());
 
         // Get data from POST
         String projectName = requestParameter.getParameter("project_name");
         String projectDesc = requestParameter.getParameter("project_desc");
-
-        // Setting default status TRUE
-        Boolean projectStatus = true;
+        boolean projectStatus = Boolean.parseBoolean(requestParameter.getParameter("project_status"));
 
         // Decode data
-        String decodedProjectName = URLDecoder.decode(projectName, "UTF-8"); //Makes us able to use "æøå"
-        String decodedProjectDesc = URLDecoder.decode(projectDesc, "UTF-8"); //Makes us able to use "æøå"
+        String decodedProjectName = URLDecoder.decode(projectName, StandardCharsets.UTF_8); //Makes us able to use "æøå"
+        String decodedProjectDesc = URLDecoder.decode(projectDesc, StandardCharsets.UTF_8); //Makes us able to use "æøå"
 
         // Insert data to project object
         Project project = new Project();
@@ -40,15 +44,9 @@ public class ProjectPostController implements HttpController {
         projectDao.insert(project);
 
         // Create response
-        //Here we added buffer.toByteArray().length to make sure we got the right .length for UTF-8
-        String body = "Project added!";
-        String response = "HTTP/1.1 200 OK\r\n" +
-                "Connection: close\r\n" +
-                "Content-Length: " + body.getBytes().length + "\r\n" +
-                "\r\n" +
-                body;
-
-        // Write the response back to the client
-        clientSocket.getOutputStream().write(response.getBytes());
+        HttpMessage redirect = new HttpMessage();
+        redirect.setStartLine("HTTP/1.1 302 Redirect");
+        redirect.getHeaders().put("Location", "http://localhost:8080/redirect.html");
+        return redirect;
     }
 }
