@@ -6,6 +6,7 @@ import no.kristiania.db.TaskDao;
 import java.io.IOException;
 import java.net.Socket;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.sql.SQLException;
 
 public class TaskPostController implements HttpController {
@@ -17,16 +18,21 @@ public class TaskPostController implements HttpController {
 
     @Override
     public void handle(HttpMessage request, Socket clientSocket) throws SQLException, IOException {
+        HttpMessage response = handle(request);
+        response.write(clientSocket);
+    }
+
+    public HttpMessage handle(HttpMessage request) throws SQLException {
         QueryString requestParameter = new QueryString(request.getBody());
 
         // Get data from POST
         String taskName = requestParameter.getParameter("task_name");
         String taskDesc = requestParameter.getParameter("task_desc");
-        Boolean taskStatus = true;
+        boolean taskStatus = Boolean.parseBoolean(requestParameter.getParameter("task_status"));
 
         // Decode data
-        String decodedTaskName = URLDecoder.decode(taskName, "UTF-8"); //Makes us able to use "æøå"
-        String decodedTaskDesc = URLDecoder.decode(taskDesc, "UTF-8"); //Makes us able to use "æøå"
+        String decodedTaskName = URLDecoder.decode(taskName, StandardCharsets.UTF_8); //Makes us able to use "æøå"
+        String decodedTaskDesc = URLDecoder.decode(taskDesc, StandardCharsets.UTF_8); //Makes us able to use "æøå"
 
         // Insert data to task object
         Task task = new Task();
@@ -38,15 +44,9 @@ public class TaskPostController implements HttpController {
         taskDao.insertTask(task);
 
         // Create response
-        //Here we added buffer.toByteArray().length to make sure we got the right .length for UTF-8
-        String body = "Task added!";
-        String response = "HTTP/1.1 200 OK\r\n" +
-                "Connection: close\r\n" +
-                "Content-Length: " + body.getBytes().length + "\r\n" +
-                "\r\n" +
-                body;
-
-        // Write the response back to the client
-        clientSocket.getOutputStream().write(response.getBytes());
+        HttpMessage redirect = new HttpMessage();
+        redirect.setStartLine("HTTP/1.1 302 Redirect");
+        redirect.getHeaders().put("Location", "http://localhost:8080/redirect.html");
+        return redirect;
     }
 }
